main_app/static/css/base.css
html {
  box-sizing: border-box
}

/* The Universal Selector */
*, /* All elements*/
*::before, /* All ::before pseudo-elements */
*::after { /* All ::after pseudo-elements */
  /* height & width will now include border & padding by default
     but can be over-ridden as needed */
  box-sizing: inherit;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: 'Quantico', sans-serif;
  min-height: 100vh;
  --nav-bg: rgb(90,61,43);
  --nav-bg-ff: rgb(255,236,180);
  --borders: rgb(244,161,39) solid 1px;
  --text-color: rgb(255,236,180);
  --link-hover-color: rgb(244,161,39);
  --button-bg: rgb(255, 255, 255);
  --button-box-shadow: 2px 2px 15px rgb(90,61,43);
  --submit: rgb(117,200,174);
  --warn: rgb(229,119,30);
  --danger: rgb(220, 20, 30);
  --secondary: rgb(57, 57, 57);
  /* --card-box-shadow: 5px 5px 6px -1px #AAA; */
  --font-reg: 12px;
  --font-m: 16px;
  --font-l: 20px;
  --font-xl: 24px;
  /* --card-border-radius: 6px; */
}

nav {
  width: 100%;
  background: var(--nav-bg); 
  border-bottom: var(--borders);
  padding: 10px 0;
}

ul {
  margin: 0;
  list-style: none;
  padding: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-links{
  display: flex;
}

main {
  width: 100%;
  padding: 0 10px;
}

nav a {
  text-decoration: none;
  color: var(--text-color);
  font-size: 16px;
}

nav a:hover {
  color: var(--link-hover-color)
}

nav li {
  padding: 5px 8px;
}
button{
  font-family: 'Quantico', sans-serif;
}
.btn {
  font-size: var(--font-m);
  padding: 5px;
  border-radius: 6px;
  width: 50%;
  margin: 0 auto;
  border-style: solid;
  background-color: var(--button-bg);
  cursor: pointer;
}

.btn:hover {
  background-color: var(--button-bg-hover);
  box-shadow: var(--button-box-shadow)
}
.btn:active{
  box-shadow: none;
}

.submit {
  border: 1px solid var(--submit);
  color: var(--submit);
}

.secondary {
  color: var(--secondary);
  border: 1px solid var(--secondary);
}

.warn {
  color: var(--warn);
  border: 1px solid var(--ward);
}

.danger {
  color: var(--danger);
  border: 1px solid var(--danger);
}

a, a:visited{
  text-decoration: none;
}

